--- a/modules/home/desktop/addons/eww/config/eww.scss
+++ b/modules/home/desktop/addons/eww/config/eww.scss
@@ -22,7 +22,7 @@
 }
 */
 
-.workspace_inactive, .workspace_active, .workspace_focused {
+.workspace_inactive, .workspace_active, .workspace_focused, .workspace_current {
     // padding: 0px 5px 0px 5px;
     
     // font-size: 14px;
@@ -38,17 +38,22 @@
     
 }
 
-.workspace_active {
-    color: #000000;
-    background-color: #888888;
-}
-
 .workspace_inactive {
     // background-color: #ffffff;
     // color: #ffffff;
 }
 
+.workspace_active {
+    color: #000000;
+    background-color: #666666;
+}
+
 .workspace_focused {
+    color: #000000;
+    background-color: #aaaaaa;
+}
+
+.workspace_current {
     color: #000000;
     background-color: #ffffff;
 }
