added a eww debug script (links the config directly to inside my config), added the env var NIXOS_CONFIG_PATH
info:
  Profile: default
  Gen: 256 -> 257
  NixOs: 24.05.20240521.5710852
  Kernel: 6.6.31

--- a/modules/home/desktop/addons/eww/config/eww.scss
+++ b/modules/home/desktop/addons/eww/config/eww.scss
@@ -2,6 +2,14 @@
    all: unset; //Unsets everything so you can style everything from scratch
 }
 
+
+// some vars
+$primary: #ffffff;
+$secondary: #;
+$tetrary: #b0b4bc;
+$bg: #3a3a3a;
+
+
 //Global Styles
 .bar {
   background-color: #3a3a3a;
