made my eww bar prettier (removed weird spacings), it's basically finished now
info:
  Profile: default
  Gen: 261 -> 262
  NixOs: 24.05.20240521.5710852
  Kernel: 6.6.31

--- a/modules/home/desktop/addons/eww/config/eww.scss
+++ b/modules/home/desktop/addons/eww/config/eww.scss
@@ -14,7 +14,8 @@ $bg: #3a3a3a;
 .bar {
   background-color: #3a3a3a;
   color: #b0b4bc;
-  padding: 5px 10px 5px 10px;
+  padding: 3px;
+  //padding: 3px 0px 3px 0px;
 }
 
 // Styles on classes (see eww.yuck for more information)
