fixed python formatting, fixed spelling errors, more ruff formatting (for example sorting imports), added ruff as a linter
info:
  Profile: default
  Gen: 284 -> 285
  NixOs: 24.11.20240524.bfb7a88
  Kernel: 6.6.31

--- a/modules/home/desktop/addons/eww/config/eww.scss
+++ b/modules/home/desktop/addons/eww/config/eww.scss
@@ -73,13 +73,13 @@ $bg: #3a3a3a;
   color: #ffd5cd;
 }
 
-.metric scale trough highlight {
+.metric scale through highlight {
   all: unset;
   background-color: #D35D6E;
   color: #000000;
   border-radius: 10px;
 }
-.metric scale trough {
+.metric scale through {
   all: unset;
   background-color: #4e4e4e;
   border-radius: 50px;
@@ -88,13 +88,13 @@ $bg: #3a3a3a;
   margin-left: 10px;
   margin-right: 20px;
 }
-.metric scale trough highlight {
+.metric scale through highlight {
   all: unset;
   background-color: #D35D6E;
   color: #000000;
   border-radius: 10px;
 }
-.metric scale trough {
+.metric scale through {
   all: unset;
   background-color: #4e4e4e;
   border-radius: 50px;
