--- a/modules/home/desktop/addons/bar/ags/src/style.scss
+++ b/modules/home/desktop/addons/bar/ags/src/style.scss
@@ -43,9 +43,14 @@ Unsets everything so you can style everything from scratch
 
 
 .container {
-    /* background-color: mix($base02, $base03, 75%); */
+     /* background-color: mix($base02, $base03, 75%); */
+    /*
     background-color: $base02;
     color: mix($base04, $base05);
+    */
+
+    background-color: $base07;
+    color: mix($base04, $base00);
     padding: 0px 5px;
     border-radius: 5px;
 }
