--- a/modules/home/desktop/addons/bar/ags/src/style.scss
+++ b/modules/home/desktop/addons/bar/ags/src/style.scss
@@ -49,8 +49,8 @@ Unsets everything so you can style everything from scratch
     color: mix($base04, $base05);
     */
 
-    background-color: $base07;
-    color: mix($base04, $base00);
+    background-color: $base05;
+    color: $base00;
     padding: 0px 5px;
     border-radius: 5px;
 }
