update flake, refactored a bit, red color on low battery
info:
  Profile: upinix-laptop
  Gen: 45 -> 46
  NixOs: 24.11.20240821.c374d94
  Kernel: 6.10.6

--- a/modules/home/desktop/addons/bar/ags/src/style.scss
+++ b/modules/home/desktop/addons/bar/ags/src/style.scss
@@ -42,6 +42,12 @@ Unsets everything so you can style everything from scratch
 }
 
 
+.battery-low {
+  // TODO: use a stylix color 
+  color: #ff0000;
+}
+
+
 .container {
      /* background-color: mix($base02, $base03, 75%); */
     /*
