improve readme, fix discord theme
info:
  Gen: 110 -> 111
  Kernel: 6.11.4
  NixOs: 24.11.20241018.4c2fcb0
  Profile: upinix-laptop
  Type: manuall

--- a/modules/home/apps/discord/theme.css
+++ b/modules/home/apps/discord/theme.css
@@ -1,29 +1,56 @@
 .theme-dark { /* Dark Mode */
     --primary-100: hsl(200 40.0% 90.5%);
+    --primary-100-hsl: 200 40.0% 90.5%;
     --primary-130: hsl(202 38.6% 87.3%);
+    --primary-130-hsl: 202 38.6% 87.3%;
     --primary-160: hsl(203 37.3% 85.4%);
+    --primary-160-hsl: 203 37.3% 85.4%;
     --primary-200: hsl(206 35.5% 83.2%);
+    --primary-200-hsl: 206 35.5% 83.2%;
     --primary-230: hsl(207 34.1% 80.8%);
+    --primary-230-hsl: 207 34.1% 80.8%;
     --primary-260: hsl(209 32.8% 77.2%);
+    --primary-260-hsl: 209 32.8% 77.2%;
     --primary-300: hsl(211 31.0% 70.4%);
+    --primary-300-hsl: 211 31.0% 70.4%;
     --primary-330: hsl(213 29.6% 64.0%);
+    --primary-330-hsl: 213 29.6% 64.0%;
     --primary-345: hsl(214 29.0% 60.5%);
+    --primary-345-hsl: 214 29.0% 60.5%;
     --primary-360: hsl(215 28.3% 56.8%);
+    --primary-360-hsl: 215 28.3% 56.8%;
     --primary-400: hsl(217 26.5% 46.8%);
+    --primary-400-hsl: 217 26.5% 46.8%;
     --primary-430: hsl(219 25.1% 39.5%);
+    --primary-430-hsl: 219 25.1% 39.5%;
     --primary-460: hsl(220 23.8% 32.9%);
+    --primary-460-hsl: 220 23.8% 32.9%;
     --primary-500: hsl(222 22.0% 25.6%);
+    --primary-500-hsl: 222 22.0% 25.6%;
     --primary-530: hsl(224 20.7% 21.2%);
+    --primary-530-hsl: 224 20.7% 21.2%;
     --primary-560: hsl(226 19.3% 17.8%);
+    --primary-560-hsl: 226 19.3% 17.8%;
     --primary-600: hsl(228 17.5% 14.4%);
+    --primary-600-hsl: 228 17.5% 14.4%;
     --primary-630: hsl(230 16.2% 12.3%);
+    --primary-630-hsl: 230 16.2% 12.3%;
     --primary-645: hsl(231 15.5% 11.4%);
+    --primary-645-hsl: 231 15.5% 11.4%;
     --primary-660: hsl(232 14.8% 10.4%);
+    --primary-660-hsl: 232 14.8% 10.4%;
     --primary-700: hsl(234 13.0% 7.8%);
+    --primary-700-hsl: 234 13.0% 7.8%;
     --primary-730: hsl(235 11.7% 5.7%);
+    --primary-730-hsl: 235 11.7% 5.7%;
     --primary-760: hsl(237 10.3% 3.7%);
+    --primary-760-hsl: 237 10.3% 3.7%;
     --primary-800: hsl(239 8.5% 1.1%);
+    --primary-800-hsl: 239 8.5% 1.1%;
     --primary-830: hsl(241 7.1% -0.4%);
+    --primary-830-hsl: 241 7.1% -0.4%;
     --primary-860: hsl(243 5.8% -1.6%);
+    --primary-860-hsl: 243 5.8% -1.6%;
     --primary-900: hsl(245 4.0% -4.5%);
+    --primary-900-hsl: 245 4.0% -4.5%;
 }
