--- a/modules/home/apps/firefox/userChrome.css
+++ b/modules/home/apps/firefox/userChrome.css
@@ -53,6 +53,7 @@ https://github.com/GideonWolfe/nix/blob/main/configs/users/gideon/configs/firefo
 /* for some reason this doesn't work for the top lvl stuff */
 tooltip {
     -moz-appearance: none !important;
+    appearance: none !important;
     background-color: var(--base01) !important;
     color: var(--base05) !important;
     border: 1px solid var(--base02) !important;
@@ -133,6 +134,7 @@ tooltip {
 .findbar {
     background-color: var(--base00);
     -moz-appearance: none !important;
+    appearance: none !important;
 }
 .findbar-container {
     background-color: var(--base00);
@@ -284,7 +286,5 @@ findbar > .close-icon{
 }
 
 
-/*-------------- TODO: ----------------------*/
-/* Change context menu separators *\
+/*-------------- TODO ----------------------*/
 /* Close window button *\
-/* Reader view button when reader is active *\
