worked on ags bar
info:
  Gen: 900 -> 901
  Kernel: 6.6.64
  NixOs: 25.05.20241211.5d67ea6
  Profile: upinix-pc
  Type: manuall

--- a/modules/home/desktop/addons/bar/ags/src/style.scss
+++ b/modules/home/desktop/addons/bar/ags/src/style.scss
@@ -3,7 +3,7 @@
 
 // Unsets everything so you can style everything from scratch
 * {
-  // all: unset;
+  all: unset;
 }
 
 // https://gitlab.gnome.org/GNOME/gtk/-/blob/gtk-3-24/gtk/theme/Adwaita/_colors-public.scss
