--- a/modules/home/desktop/bar/ags/src/style.scss
+++ b/modules/home/desktop/bar/ags/src/style.scss
@@ -1,5 +1,9 @@
 @use "sass:color";
-@use "colors" as *;
+/* @use "colors" as *; */
+// HACK: i cant figure out how to prevent the relative imports 
+//  be based on the unresolved path of the symlink to app.ts
+//  so i cant use the relative path
+@use "/home/upidapi/.config/ags/colors.scss" as *;
 
 // Unsets everything so you can style everything from scratch
 * {
