auto: pre rebuild commit [probably broken]
If you see this. Then the script failed to ammend it
i.e something broke during the update

debug

info:
  Gen: 236 -> 236 ->
  Kernel: 6.13.0
  NixOs: 25.05.20250129.9d3ae80
  Profile: upinix-laptop
  Type: pre-rebuild

--- a/modules/home/desktop/bar/ags/src/style.scss
+++ b/modules/home/desktop/bar/ags/src/style.scss
@@ -3,6 +3,8 @@
 // HACK: i cant figure out how to prevent the relative imports 
 //  be based on the unresolved path of the symlink to app.ts
 //  so i cant use the relative path
+//  https://github.com/Aylur/ags/issues/681
+
 @use "/home/upidapi/.config/ags/colors.scss" as *;
 
 // Unsets everything so you can style everything from scratch
